[gd_scene load_steps=3 format=3 uid="uid://c305ur0bx7ir"]

[ext_resource type="Script" path="res://Attacks/enemy_area_field.gd" id="1_acydg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_akg5p"]

[node name="EnemyAreaField" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_acydg")

[node name="Line2D" type="Line2D" parent="."]
closed = true
width = 1.0
default_color = Color(0.752941, 0.262745, 0.207843, 1)

[node name="FieldArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_akg5p")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
